--- a/config/deployment-hadoop.yaml
+++ b/config/deployment-hadoop.yaml
@@ -23,6 +23,9 @@ spec:
       - image: michaelwangtw/hadoop-namenode:latest
         imagePullPolicy: Always
         name: hadoop-namenode
+        env:
+          - name: CLUSTER_NAME
+            value: "test"
         ports:
           - containerPort: 9870
 
