--- a/config/deployment-sonar.yaml
+++ b/config/deployment-sonar.yaml
@@ -20,7 +20,7 @@ spec:
         app: sonar
     spec:
       containers:
-        - image: noneedname/sonar:latest
+        - image: michaelwangtw/sonarqube-scanner
           imagePullPolicy: Always
           name: spark
           ports:
